--- a/strong.html
+++ b/strong.html
@@ -4,7 +4,8 @@
 <title>STRONG</title>
 <style>
 	body {
-		background-color: #003366;
+	background-color: #003366;
+    font-family: Arial,sans-serif;
 	}
 	h1 {
 		color: #ff0099;
