--- a/index.html
+++ b/index.html
@@ -40,11 +40,18 @@
     <div class="body hidden">     
       <h3 class="body-title wow fadeInDown" data-wow-duration="0.5s">projects</h3>
       <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
+        <h5 class="project-title">AWS SERVER</h5>
+        <p class="project-content">An Amazon Web Services server running Weblogic 12.1.3. The project runs AngularJS, Spring MVC, Hibernate, and an Oracle database.<br><br>
+        <a class="link" href="http://52.70.117.91:7001/newmvn">Go to server</a>
+        </p>
+      </div>
+
+      <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
         <h5 class="project-title">BRICK BLASTER 6000</h5>
         <p class="project-content">An iOS game made with Objective-C and Cocos2D. The player controls a spaceship and defends earth from an asteroid bombardment. The game ends when earth gets hit by an asteroid; otherwise, keep playing to get your score as high as possible. Unpublished due to unoriginal art and expensive developer fees.</p>
       </div>
       
-      <div class="body-element wow fadeInDown" data-wow-duration="0.5s" data-wow-delay="0.1s">
+      <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
         <h5 class="project-title">DUCKDUCKGO EMACS CHEATSHEET</h5>
         <p class="project-content">An Emacs commands cheatsheet Instant Answer for DuckDuckGo. Mostly HTML/CSS styling with some Perl scripting. Recently restyled to fit DuckDuckGo's cheatsheet template.</p>
       </div>
@@ -54,7 +61,7 @@
         <p class="project-content">A Unix-like virtual operating system that runs on a Linux host. Complete with processes/threads, scheduling, a FAT filesystem, and a shell/command line. Created in C with three teammates.</p>
       </div>
       
-      <div class="body-element wow fadeInDown" data-wow-duration="0.5s" data-wow-delay="0.1s">
+      <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
         <h5 class="project-title">THE MAGICAL ADVENTURES OF LEMONS</h5>
         <p class="project-content">A text-based adventure game with multiple level areas, NPC's and enemies, a trading system, side quests, items, and stats. Also includes a combat system with skill and chance components and rapidly-increasing difficulty. Created in C++ with one partner.</p>
       </div>
@@ -64,7 +71,7 @@
         <p class="project-content">A Breakout clone with heavy object-oriented programming and a graphical interface. The first game I created, running on any desktop environment. Created with Java Swing.</p>
       </div>
 
-      <div class="body-element wow fadeInDown" data-wow-duration="0.5s" data-wow-delay="0.1s">
+      <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
         <h5 class="project-title">SOME OTHER STUFF</h5>
         <p class="project-content">A client/server chat-room client supporting multiple threads/users. A static twitter-like social network graph. Several simple iOS apps using Core Data, MapKit, varying View Controllers, and other libraries. Simple Ruby on Rails projects. A Django app for analyzing financial data.</p>
       </div>
@@ -73,7 +80,7 @@
 
     </div>
 
-    <div class="projects-button-container wow fadeInDown" data-wow-duration="0.5s" data-wow-delay="0.1s">
+    <div class="projects-button-container wow fadeInDown" data-wow-duration="0.5s">
       <!--<div class="projects-button">
         <p class="button-text">view projects</p>
       </div>-->
