--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
       <h3 class="body-title wow fadeInDown" data-wow-duration="0.5s">projects</h3>
       <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
         <h5 class="project-title">AWS SERVER</h5>
-        <p class="project-content">An Amazon Web Services server running Weblogic 12.1.3. The project runs AngularJS, Spring MVC, Hibernate, and an Oracle database.<br><br>
-        <a href="http://52.70.117.91:7001/newmvn">Go to server</a>
+        <p class="project-content">An Amazon Web Services server running Weblogic 12.1.3. The project runs AngularJS, Spring MVC, Hibernate, and an Oracle database. It allows posting and getting of image links to and from the database.<br><br>
+        <a href="http://52.70.117.91:7001/photodump">Go to server</a>
         </p>
       </div>
 
