changed aws server block a little

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
     <div class="body hidden">     
       <h3 class="body-title wow fadeInDown" data-wow-duration="0.5s">projects</h3>
       <div class="body-element wow fadeInDown" data-wow-duration="0.5s">
-        <h5 class="project-title">AWS SERVER</h5>
+        <h5 class="project-title">PHOTODUMP XYZ</h5>
         <p class="project-content">An Amazon Web Services server running Weblogic 12.1.3. The project runs AngularJS, Spring MVC, Hibernate, and an Oracle database. It allows posting and getting of image links to and from the database.<br><br>
-        <a href="http://photodump.xyz">Go to server</a>
+        <a href="http://photodump.xyz">Go to photodump.xyz</a>
         </p>
       </div>
 
