--- a/wumpus/wumpus.html
+++ b/wumpus/wumpus.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>HUNT THE WUMPUS</title>
-        <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="wumpus-style.css" type="text/css" rel="stylesheet">
     </head>
     
     <body>
