restyled the wumpus and removed alerts in favor of little messages

--- a/wumpus/wumpus.html
+++ b/wumpus/wumpus.html
@@ -10,7 +10,7 @@
          <table id="board">
              <tr id="row0">
                  <td id="0-0">
-                     <div id="player"></div>
+                     <div id="player">You</div>
                  </td>
                  <td id="0-1"></td>
                  <td id="0-2"></td>
