--- a/wumpus/wumpus.html
+++ b/wumpus/wumpus.html
@@ -7,6 +7,7 @@
     
     <body>
         <h1>User the arrow keys to move!</h1>
+        <button id="refresh" value="Start Over">Start Over</button>
          <table id="board">
              <tr id="row0">
                  <td id="0-0">
