add all the things!

--- a/wumpus/wumpus.html
+++ b/wumpus/wumpus.html
@@ -3,6 +3,7 @@
     <head>
         <title>HUNT THE WUMPUS</title>
         <link href="wumpus-style.css" type="text/css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     
     <body>
