--- a/404.html
+++ b/404.html
@@ -9,6 +9,6 @@
   </head>
   <body style="background-color: #f2f2f2;">
     <h1 style="text-align:center; font-family:'Roboto', Helvetica, Arial, sans-serif">Looks like you're lost. Nice one.</h1>
-    <h3 style="font-family:'Roboto', Helvetica, Arial, sans-serif">To go back to the home page, click <a href="http://www.jimbrighter.com">here</a></h3>
+    <h3 style="font-family:'Roboto', Helvetica, Arial, sans-serif"><a href="http://www.jimbrighter.com">Get outta here</a></h3>
   </body>
 </html>
