renamed because wumpus/wumpus is fucking stupid

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>An HTML + jQuery calculator</p>  
         </div></a>
         
-        <a href="/wumpus/wumpus"><div class="card">
+        <a href="/wumpus/game"><div class="card">
           <h6 class="small">Hunt the Wumpus</h6>
           <p>An HTML + VanillaJS version of Hunt the Wumpus. It's a work in progress.</p>  
         </div></a>
