fixed a broken link

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         
         <div style="width: 80%; border-bottom: 1px solid #444444; margin: 1em auto 1em auto;"></div>
         
-        <a href="/calculator"><div class="card">
+        <a href="/junk/calculator"><div class="card">
           <h6 class="small">A Calculator</h6>
           <p>An HTML + jQuery calculator</p>  
         </div></a>
