--- a/battleship/index.html
+++ b/battleship/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html ng-app="battleship">
+<html ng-app="battleship" lang="en">
 <head>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="battleshipApp.js"></script>
