--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <h5 id="middle-heading">Some Links</h5>
 
       <div id="card-deck">
-        <a href="http://photodump.xyz"><div class="card">
+        <a href="http://52.70.117.91/"><div class="card">
           <h6 class="small">Photodump XYZ</h6>
-          <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database.</p>
+          <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database. Deployed using Docker. Please excuse the URL while some DNS nonsense gets sorted :)</p>
         </div></a>
 
         <div class="card">
@@ -60,11 +60,16 @@
           <h6 class="small">A Calculator</h6>
           <p>An HTML + jQuery calculator</p>  
         </div></a>
+
+        <a href="/battleship"><div class="card">
+          <h6 class="small">Battleship</h6>
+          <p>An AngularJS implementation of Battleship. Work in progress</p>
+        </div></a>
         
-        <a href="/wumpus/game"><div class="card">
+        <!-- <a href="/wumpus/game"><div class="card">
           <h6 class="small">Hunt the Wumpus</h6>
           <p>An HTML + VanillaJS version of Hunt the Wumpus. It's a work in progress.</p>  
-        </div></a>
+        </div></a> -->
 
       </div>
     </div>
