updated url now that photodump.xyz dns is sorted

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
       <h5 id="middle-heading">Some Links</h5>
 
       <div id="card-deck">
-        <a href="http://52.70.117.91/"><div class="card">
+        <a href="http://photodump.xyz/"><div class="card">
           <h6 class="small">Photodump XYZ</h6>
-          <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database. Deployed using Docker. Please excuse the URL while some DNS nonsense gets sorted :)</p>
+          <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database. Deployed using Docker.</p>
         </div></a>
 
         <div class="card">
