--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
         var color = 0;
 
         while (ratio <=4.5) {
+
           color = randomColor();
 
           ratio = (luminanace(255,255,255) + 0.05) / 
@@ -104,6 +105,11 @@
                               parseInt(color.substring(2,4), 16),
                               parseInt(color.substring(4,6), 16)) + 0.05);
         };
+
+        color = color.toString();
+        do {
+          color = color.length < 6 ? '0' + color : color;
+        } while (color.length < 6);
 
         window.onload = function() {
           document.body.style.backgroundColor = '#' + color;
