--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <li class="link"><a href="https://www.github.com/jim-brighter">GitHub</a></li>
           <li class="link"><a href="https://www.linkedin.com/in/jimbrighter">LinkedIn</a></li>
           <li class="link"><a href="mailto:hello@jimbrighter.com">Email</a></li>
-          <li class="link"><a href="JimBrighter.pdf">Resume</a></li>
+          <li class="link"><a href="resume.pdf">Resume</a></li>
         </ul>
       </div>
     </div>
