--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
       <h5 id="middle-heading">Some Links</h5>
 
       <div id="card-deck">
-        <a href="http://photodump.xyz/"><div class="card">
           <h6 class="small">Photodump XYZ</h6>
+          <h6>This page is temporarily down while I move it from AWS to Digital Ocean (my 1 year of free tier is up...)</h6>
           <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database. Deployed using Docker.</p>
-        </div></a>
+        </div>
 
         <!-- <div class="card">
           <h6 class="small">Coming Soon!</h6>
