Always test your code before you push smh

--- a/index.html
+++ b/index.html
@@ -39,8 +39,9 @@
       <h5 id="middle-heading">Some Links</h5>
 
       <div id="card-deck">
+        <div class="card">
           <h6 class="small">Photodump XYZ</h6>
-          <h6>This page is temporarily down while I move it from AWS to Digital Ocean (my 1 year of free tier is up...)</h6>
+          <p><strong>*** This page is temporarily unavailable as I move it from AWS to Digital Ocean</strong></p>
           <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database. Deployed using Docker.</p>
         </div>
 
