add link to new location

--- a/index.html
+++ b/index.html
@@ -39,11 +39,10 @@
       <h5 id="middle-heading">Some Links</h5>
 
       <div id="card-deck">
-        <div class="card">
+        <a href="http://67.205.153.26:9001/"><div class="card">
           <h6 class="small">Photodump XYZ</h6>
-          <p><strong>*** This page is temporarily unavailable as I move it from AWS to Digital Ocean</strong></p>
           <p>An image dump website that allows posting and getting of images. Uses AngularJS for the frontend and a Java Spring Boot application for the backend, with Hibernate to manage storage in a PostgreSQL database. Deployed using Docker.</p>
-        </div>
+        </div></a>
 
         <!-- <div class="card">
           <h6 class="small">Coming Soon!</h6>
