--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </div>
     </div>
     <h6 id="bio-summary">Hey, I'm Jim. I'm a developer currently using Java and AngularJS.<br/>
-      <span class="small">(But I like C/C++ and Python too)</span></h6>
+      <span class="small">(But I like NodeJS and Python too)</span></h6>
   </div>
 
     <div id="middle" class="main">
