--- a/404.html
+++ b/404.html
@@ -7,8 +7,8 @@
     <meta charset="UTF-8">
     <meta name="author" content="Jim Brighter">
   </head>
-  <body style="background-color: #f2f2f2;">
-    <h1 style="text-align:center; font-family:'Roboto', Helvetica, Arial, sans-serif">Looks like you're lost. Nice one.</h1>
-    <h3 style="text-align:center; font-family:'Roboto', Helvetica, Arial, sans-serif"><a href="http://www.jimbrighter.com">Get outta here</a></h3>
+  <body style="background-color: #f2f2f2; text-align:center; font-family:'Roboto', Helvetica, Arial, sans-serif">
+    <h1>Looks like you're lost. Nice one.</h1>
+    <h3><a href="http://www.jimbrighter.com">Get outta here</a></h3>
   </body>
 </html>
