--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158356262-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-158356262-1');
+  </script>
+
   <title>Jim Brighter</title>
   <link rel="stylesheet" type="text/css" href="css/home-main.css">
   <link rel="stylesheet" type="text/css" href="css/home-phone.css">
