--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         </ul>
       </div>
     </div>
-    <h6 id="bio-summary">Hey, I'm Jim. I'm a developer currently using Java and AngularJS.<br />
-      <span class="small">(But I like NodeJS and Python too)</span></h6>
+    <h6 id="bio-summary">Hey, I'm Jim. I'm a full-stack developer mostly using Java.<br />
+      <span class="small">I use Angular, Docker, AWS, and Jenkins too</span></h6>
   </div>
 
   <script>
