--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       </div>
     </div>
     <h6 id="bio-summary">Hey, I'm Jim. I'm a full-stack developer mostly using Java.<br />
-      <span class="small">I use Angular, Docker, AWS, and Jenkins too</span></h6>
+      <span class="small">I use Angular, Docker, AWS, and Jenkins too.</span></h6>
   </div>
 
   <script>
