--- a/index.html
+++ b/index.html
@@ -1,35 +1,32 @@
 <!doctype html>
-
 <html lang="en">
-
-<head>
-  <title>Jim Brighter</title>
-  <link rel="stylesheet" type="text/css" href="css/home-main.css">
-  <link rel="stylesheet" type="text/css" href="css/home-phone.css">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="UTF-8">
-  <meta name="author" content="Jim Brighter">
-  <meta name="keywords" content="jim, Jim, brighter, Brighter, Jim Brighter, jim brighter">
-</head>
-
-<body>
-
-  <div id="top" class="main">
-
-    <div class="titles">
-      <h1 class="heading">Jim Brighter</h1>
-      <h5 class="heading">Senior Software Engineer</h5>
-      <div id="list-container">
-        <ul id="links">
-          <li class="link"><a href="https://www.github.com/jim-brighter">GitHub</a></li>
-          <li class="link"><a href="https://www.linkedin.com/in/jimbrighter">LinkedIn</a></li>
-          <li class="link"><a href="mailto:hello@jimbrighter.com">Email</a></li>
-          <li class="link"><a href="resume.pdf">Resume</a></li>
-        </ul>
+  <head>
+    <title>Jim Brighter</title>
+    <link rel="stylesheet" type="text/css" href="css/home-main.css">
+    <link rel="stylesheet" type="text/css" href="css/home-phone.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="author" content="Jim Brighter">
+    <meta name="keywords" content="jim, Jim, brighter, Brighter, Jim Brighter, jim brighter">
+  </head>
+  <body>
+    <div id="top" class="main">
+      <div class="titles">
+        <h1 class="heading">Jim Brighter</h1>
+        <h5 class="heading">Senior Software Engineer</h5>
+        <div id="list-container">
+          <ul id="links">
+            <li class="link"><a href="https://www.github.com/jim-brighter">GitHub</a></li>
+            <li class="link"><a href="https://www.linkedin.com/in/jimbrighter">LinkedIn</a></li>
+            <li class="link"><a href="mailto:hello@jimbrighter.com">Email</a></li>
+            <li class="link"><a href="resume.pdf">Resume</a></li>
+          </ul>
+        </div>
       </div>
+      <h6 id="bio-summary">Hey, I'm Jim. I'm a full-stack developer mostly using Java.
+        <br />
+        <span class="small">I use AWS, Jenkins, Docker, and Angular too.</span>
+      </h6>
     </div>
-    <h6 id="bio-summary">Hey, I'm Jim. I'm a full-stack developer mostly using Java.<br />
-      <span class="small">I use AWS, Jenkins, Docker, and Angular too.</span></h6>
-  </div>
-</body>
+  </body>
 </html>
