--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="top" class="main">
       <div class="titles">
         <h1 class="heading">Jim Brighter</h1>
-        <h5 class="heading">Senior Software Engineer</h5>
+        <h5 class="heading">Software Engineer</h5>
         <div id="list-container">
           <ul id="links">
             <li class="link"><a href="https://www.github.com/jim-brighter">GitHub</a></li>
