--- a/index.html
+++ b/index.html
@@ -10,23 +10,20 @@
     <meta name="keywords" content="jim, Jim, brighter, Brighter, Jim Brighter, jim brighter">
   </head>
   <body>
-    <div id="top" class="main">
-      <div class="titles">
-        <h1 class="heading">Jim Brighter</h1>
-        <h5 class="heading">Software Engineer</h5>
-        <div id="list-container">
-          <ul id="links">
-            <li class="link"><a href="https://www.github.com/jim-brighter">GitHub</a></li>
-            <li class="link"><a href="https://www.linkedin.com/in/jimbrighter">LinkedIn</a></li>
-            <li class="link"><a href="mailto:hello@jimbrighter.com">Email</a></li>
-            <li class="link"><a href="resume.pdf">Resume</a></li>
-          </ul>
-        </div>
+    <div class="top">
+      <h1>Jim Brighter</h1>
+      <h5>Software Engineer</h5>
+      <div id="list-container">
+        <ul id="links">
+          <li class="link"><a href="https://www.github.com/jim-brighter">GitHub</a></li>
+          <li class="link"><a href="https://www.linkedin.com/in/jimbrighter">LinkedIn</a></li>
+          <li class="link"><a href="mailto:hello@jimbrighter.com">Email</a></li>
+          <li class="link"><a href="resume.pdf">Resume</a></li>
+        </ul>
       </div>
-      <h6 id="bio-summary">Hey, I'm Jim. I'm a full-stack developer mostly using Java.
-        <br />
-        <span class="small">I use AWS, Jenkins, Docker, and Angular too.</span>
-      </h6>
     </div>
-  </body>
+    <div class="bottom">
+      <h5>Hey, I'm Jim. I'm a full-stack developer mostly using Java.</h5>
+      <h6>I use AWS, Jenkins, Docker, and Angular too.</h6>
+    </div>
 </html>
