change text size

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       </ul>
     </div>
     <div class="bottom">
-      <h5>Hey, I'm Jim. I'm a full-stack developer mostly using Java.</h5>
-      <h6>I use AWS, Jenkins, Docker, and Angular too.</h6>
+      <h6>Hey, I'm Jim. I'm a full-stack developer specializing in backend APIs and cloud infrastructure.</h6>
     </div>
 </html>
