show 404 page some love

--- a/404.html
+++ b/404.html
@@ -1,14 +1,19 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Oh no...</title>
-    <meta name="viewport" content="initial-scale=1">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:400,300" rel="stylesheet" type="text/css">
+    <title>?</title>
+    <link rel="stylesheet" type="text/css" href="css/home-main.css">
+    <link rel="stylesheet" type="text/css" href="css/home-phone.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
     <meta name="author" content="Jim Brighter">
   </head>
-  <body style="background-color: #f2f2f2; text-align:center; font-family:'Roboto', Helvetica, Arial, sans-serif">
-    <h1>Looks like you're lost. Nice one.</h1>
-    <h3><a href="http://www.jimbrighter.com">Get outta here</a></h3>
+  <body>
+    <div class="top">
+      <h1>Looks like you're lost. Nice one.</h1>
+    </div>
+    <div class="bottom">
+      <h5><a href="https://www.jimbrighter.com">Get outta here</a></h3>
+    </div>
   </body>
 </html>
